<resources>
    <string name="app_name">Hangrim</string>
    <string name="app_name_upper">HANGRIM</string>

    <string name="main_portal_createcard">Create card.</string>
    <string name="main_permission_grant_failed">Allow us to save the files in your device.</string>
    <string name="main_permission_grant_err">Most of applications may not function.</string>

    <string name="hgpaint_reset_title">HEY!!</string>
    <string name="hgpaint_reset_content">Would you like to try again?</string>
    <string name="hgpaint_unredo_error">No data found.</string>
    <string name="hgpaint_undo_error_content">Can’t Undo.</string>
    <string name="hgpaint_redo_error_content">Can’t Redo.</string>

    <string name="common_error">An error occurred.</string>
    <string name="common_file_err">File not found.</string>

    <string name="shuffle_call_word_error">Not able to fetch the words.</string>
    <string name="shuffle_attach_failed">No drawing data found.</string>
    <string name="shuffle_loading">Projecting the image.</string>

    <string name="drawing_preview_content">You have created a new HanGrim\nShare the card with your friends!</string>
    <string name="drawing_preview_input1">What is it called?</string>
    <string name="drawing_preview_input2">How to pronounciate in your language?</string>
    <string name="drawing_preview_nofile">The  file may not be saved.</string>

    <string name="sign_saveerr">Not able to save the signature.</string>
    <string name="sign_404">Sign is not found</string>

    <string name="hg_category_0">OBJECT</string>
    <string name="hg_category_1">MY OWN</string>
    <string name="hg_category_2">TALK</string>
    <string name="hg_category_3">KITCHEN</string>
    <string name="hg_category_4">PEOPLE</string>
    <string name="hg_category_5">TIME</string>
    <string name="hg_category_6">NUMBER</string>
    <string name="hg_category_7">BODY</string>
    <string name="hg_category_8">PLACE</string>
    <string name="hg_category_9">ANIMAL</string>
    <string name="hg_category_10">ETC.</string>

    <string name="toolbar_mycard">MY HANGRIM CARD</string>
    <string name="main_portal_myhgcard">MY HANGRIM CARD</string>
    <string name="main_portal_createhg">CREATE HANGRIM</string>
    <string name="main_portal_mysign">MY SIGNATURE</string>
    <string name="main_portal_err">Internal server error.</string>
    <string name="main_portal_no_remain">Congratulations!</string>
    <string name="main_portal_no_remain_ctx">Mastered all of our basic words!!\nHow about your own HanGrim now?</string>

    <string name="my_cards_remove">HEY!!!</string>
    <string name="my_cards_remove_content">Are you sure to delete?</string>
    <string name="my_card_empty">Tab on [CREATE HANGRIM] to create your own HanGrim.</string>

    <string name="preview_message_shuffle">You have gaind a new HanGrim.\nShare the card with your friends!</string>
    <string name="preview_message_sign">Congratulation!!\nYou have made your own signature.</string>

    <string name="cauly_key">CAULY</string>

    <string name="ent_pag_dialog_2p">Write Hangeul along the line!</string>
    <string name="ent_pag_dialog_3p">Draw a picture that reminds you of the word!</string>
    <string name="ent_pag_dialog_6p">Write Hangeul you have learned!</string>
    <string name="ent_pag_dialog_9p">Create your own signature!</string>

    <string name="ent_splash_text">Ready for your HanGrim gift? 두근두근♡</string>
    <string name="copyright">Copyright © 2019 HAPPY-IT All rights reserved.</string>

    <string name="sign_exsit">You have ALREADY made your signature.\nAre you sure to make a new one?</string>

    <string name="goto_next">NEXT</string>
    <string name="goto_back">BACK</string>
</resources>
