<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="horizontal">
    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/preview_col1"
        android:layout_weight="1">
        <!-- 일부 입력에서 두 뷰를 교체 사용 [기본값] -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/preview_title_editor"
            android:background="@null"
            android:textSize="14sp"
            android:padding="8dp"
            android:hint="@string/drawing_preview_input1"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/preview_title_view"
            android:text="@string/common_error"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:visibility="gone"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/preview_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/preview_col2"
        android:layout_weight="1.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/preview_logo"
            android:text="[!] HANGRIM"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_margin="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/preview_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/preview_logo"
            android:text="@string/drawing_preview_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#000000" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/preview_share_image"
            app:layout_constraintTop_toBottomOf="@id/preview_content"
            app:layout_constraintBottom_toTopOf="@id/preview_comment_cont"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@null"
            android:src="@drawable/ic_share"
            android:scaleType="centerInside"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/preview_comment_cont"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
            <!-- 일부 입력에서 두 뷰를 교체 사용 [기본값] -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/preview_comment_editor"
                android:background="@null"
                android:textSize="14sp"
                android:padding="8dp"
                android:hint="@string/drawing_preview_input2"
                android:visibility="visible"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/preview_comment_view"
                android:text="@string/common_error"
                android:gravity="center"
                android:textSize="18sp"
                android:visibility="gone"/>
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>