<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/main_portal_background">
    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/main_logo"
        android:src="@drawable/ic_main_icon"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:layout_width="240dp"
        android:layout_height="70dp"
        android:id="@+id/main_portal_shuffle"
        android:src="@drawable/ic_start_hangrim"
        android:scaleType="centerInside"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/main_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/main_portal_shuffle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/main_portal_mycards"
                    android:src="@drawable/ic_my_cards"
                    android:background="@null"
                    android:scaleType="centerInside"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_portal_myhgcard"
                    android:fontFamily="monospace"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_margin="4dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_create_card"
                    android:background="@null"
                    android:scaleType="centerInside"
                    android:id="@+id/main_portal_createcard"
                    android:text="@string/main_portal_createcard"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_portal_createhg"
                    android:fontFamily="monospace"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_margin="4dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp">
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/main_portal_createsign"
                android:src="@drawable/ic_create_sign"
                android:background="@null"
                android:scaleType="centerInside"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_portal_mysign"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_margin="4dp"/>
    </LinearLayout>

    <View
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:id="@+id/ads"
        android:background="#D1D2D4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>